# apriltag-tests

./: .gitattributes  .gitignore  README.md  flake.nix
.github/workflows/: detect-and-compare.yml
detectors/apriltag-3.4.5/: CMakeLists.txt  README.md  detector.cpp
detectors/apriltags-kaess/: README.md  detector.cpp
detectors/apriltags-kaess-3aea96d/: CMakeLists.txt  detector.cpp
detectors/kornia-apriltag-0.1.10/: Cargo.toml
detectors/kornia-apriltag-0.1.10/src/: main.rs
detectors/kornia-rs-apriltag/: Cargo.toml
detectors/kornia-rs-apriltag-centred-coordinates/: Cargo.toml
detectors/kornia-rs-apriltag-centred-coordinates/src/: main.rs
detectors/kornia-rs-apriltag-experiment/: Cargo.toml
detectors/kornia-rs-apriltag-experiment/src/: main.rs
detectors/kornia-rs-apriltag-linefit/: Cargo.toml
detectors/kornia-rs-apriltag-linefit/src/: main.rs
detectors/kornia-rs-apriltag-other-fixes/: Cargo.toml
detectors/kornia-rs-apriltag/src/: main.rs
ground-truth/: image1.json  image2.json  image3.json
results/apriltag-3.4.5/: image1.json  image2.json  image3.json
results/apriltag-3.4.5@aarch64-darwin/: image1.json  image2.json  image3.json  manifest.json
results/apriltag-3.4.5@x86_64-linux/: image1.json  image2.json  image3.json
results/apriltags-kaess-3aea96d/: image1.json  image2.json  image3.json
results/apriltags-kaess-3aea96d@aarch64-darwin/: image1.json  image2.json  image3.json  manifest.json
results/apriltags-kaess-3aea96d@x86_64-linux/: image1.json  image2.json  image3.json
results/kornia-apriltag-0.1.10/: image3.json
results/kornia-rs-apriltag/: image1.json  image2.json  image3.json  manifest.json
results/kornia-rs-apriltag-centred-coordinates/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag-centred-coordinates@aarch64-darwin/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag-centred-coordinates@x86_64-linux/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag-experiment/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag-experiment-optimized/: image1.json
results/kornia-rs-apriltag-linefit@aarch64-darwin/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag-linefit@x86_64-linux/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag-other-fixes/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag@aarch64-darwin/: image1.json  image2.json  image3.json
results/kornia-rs-apriltag@x86_64-linux/: image1.json  image2.json  image3.json
schema/: README.md  detection-format.json
tools/compare-detectors/: README.md  package-lock.json  package.json  tsconfig.json
tools/compare-detectors/src/: compare.ts  env.d.ts
tools/compare-detectors/src/components/: DetectorCard.astro  ImageSection.astro  ImageViewer.astro  SummaryGrid.astro  TagList.astro
tools/compare-detectors/src/layouts/: Layout.astro
tools/compare-detectors/src/lib/: data.ts  types.ts
tools/compare-detectors/src/pages/: index.astro
tools/ground-truth-editor/: README.md  index.html  package-lock.json  package.json  server.ts  vite.config.ts
tools/ground-truth-editor/src/: main.ts  style.css
