[package]
name = "kornia-apriltag-centred-coordinates-detector"
version = "1.0.0"
edition = "2021"

[dependencies]
kornia-apriltag = { git = "https://github.com/rossng/kornia-rs", branch = "centred-coordinates" }
kornia-image = { git = "https://github.com/rossng/kornia-rs", branch = "centred-coordinates" }
kornia-imgproc = { git = "https://github.com/rossng/kornia-rs", branch = "centred-coordinates" }
kornia-io = { git = "https://github.com/rossng/kornia-rs", branch = "centred-coordinates" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
