[package]
name = "kornia-apriltag-detector"
version = "1.0.0"
edition = "2021"

[dependencies]
kornia-apriltag = { git = "https://github.com/rossng/kornia-rs", branch = "apriltag-experiment" }
kornia-image = { git = "https://github.com/rossng/kornia-rs", branch = "apriltag-experiment" }
kornia-imgproc = { git = "https://github.com/rossng/kornia-rs", branch = "apriltag-experiment" }
kornia-io = { git = "https://github.com/rossng/kornia-rs", branch = "apriltag-experiment" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
