[package]
name = "kornia-apriltag-other-fixes-detector"
version = "1.0.0"
edition = "2021"

[dependencies]
kornia-apriltag = { git = "https://github.com/rossng/kornia-rs", branch = "other-fixes" }
kornia-image = { git = "https://github.com/rossng/kornia-rs", branch = "other-fixes" }
kornia-imgproc = { git = "https://github.com/rossng/kornia-rs", branch = "other-fixes" }
kornia-io = { git = "https://github.com/rossng/kornia-rs", branch = "other-fixes" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
