[package]
name = "kornia-apriltag-detector"
version = "1.0.0"
edition = "2021"

[dependencies]
kornia-apriltag = { git = "https://github.com/kornia/kornia-rs", rev = "76fb22549b30300dc3dbd79efe30a4ea699303c9" }
kornia-image = { git = "https://github.com/kornia/kornia-rs", rev = "76fb22549b30300dc3dbd79efe30a4ea699303c9" }
kornia-imgproc = { git = "https://github.com/kornia/kornia-rs", rev = "76fb22549b30300dc3dbd79efe30a4ea699303c9" }
kornia-io = { git = "https://github.com/kornia/kornia-rs", rev = "76fb22549b30300dc3dbd79efe30a4ea699303c9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
